--- a/DReporting/DReporting.csproj
+++ b/DReporting/DReporting.csproj
@@ -160,7 +160,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Properties\licenses.licx" />
+    <None Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Services\DefaultXtraReport.resx">
       <DependentUpon>DefaultXtraReport.cs</DependentUpon>
       <SubType>Designer</SubType>
